tests/should_fail/bad_range_negative.sm
initial foo
final bar

# fail because of -10
region (-10 20 15 50)

foo -- keys [ a ] --> bar
